# tempest-monitor

./: .deny.toml  Cargo.toml  LICENSE  README.md  flake.nix  scratch_sys.rs
.cargo/: audit.toml
.github/workflows/: release.yml
scratch/: cargoerror.txt  check_sysinfo.rs  scratch.rs
src/: alerts.rs  app.rs  cli.rs  config.rs  db.rs  error.rs  export.rs  input.rs  lib.rs  linux_helper.rs  macos_helper.rs  main.rs  platform.rs  power_mode.rs  process_helper.rs  service_inspector.rs  system_helper.rs  telemetry_core.rs  theme.rs  ui.rs
src/widgets/: chart.rs  cpu.rs  disk.rs  focus.rs  gpu.rs  history.rs  memory.rs  mod.rs  network.rs  overview.rs  processes.rs  services.rs  sockets.rs
tests/: integration_tests.rs
