[package]
name = "tempest-monitor"
version = "0.4.7"
authors = ["7empest462"]
description = "A stunning, real-time terminal system monitor (TUI) for macOS, Linux, and Windows, with a library for hardware telemetry."
repository = "https://github.com/7empest462/tempest-monitor"
homepage = "https://github.com/7empest462/tempest-monitor"
documentation = "https://docs.rs/tempest-monitor"
license-file = "LICENSE"
license = "BSL-1.0"
readme = "README.md"
keywords = ["tui", "system-monitor", "telemetry", "macos", "linux"]
categories = ["command-line-utilities", "visualization", "os::linux-apis", "os::macos-apis", "os::windows-apis"]
edition = "2024"
default-run = "tempest-monitor"
exclude = ["README_assets/*", ".github/*"]

[lib]
name = "tempest_monitor"
path = "src/lib.rs"

[[bin]]
name = "tempest-monitor"
path = "src/main.rs"


[features]
default = ["full"]
full = ["database", "metrics", "export"]
database = ["dep:sqlx"]
metrics = ["dep:reqwest", "dep:metrics", "dep:metrics-exporter-prometheus"]
export = ["dep:plotters"]

[dependencies]
# ── Core TUI ──────────────────────────────────────────────────────────────────
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = "0.30"
sysinfo = "0.39.3"
starship-battery = "0.11.0"
unicode-width = "0.2.2"
chrono = "0.4.45"
# libc moved to [target.'cfg(unix)'.dependencies]
regex = "1.12.3"
dirs = "6"

# ── Phase 8: Foundation & CLI ─────────────────────────────────────────────────
clap = { version = "4.6.1", features = ["derive", "env"] }
config = "0.15.23"
serde = { version = "1.0.228", features = ["derive"] }
yaml_serde = "0.10.4"
thiserror = "2.0.18"
parking_lot = "0.12.5"
dashmap = "6.2.1"
futures = "0.3.32"

# ── Phase 9: Enhanced Process & Sockets ───────────────────────────────────────
# netstat2 moved to [target.'cfg(unix)'.dependencies]
ratatui-textarea = { version = "0.9.1", features = ["crossterm"] }

# pnet moved to [target.'cfg(unix)'.dependencies]

# ── Phase 12: Persistence ────────────────────────────────────────────────────
tokio = { version = "1.52.3", features = ["full"] }
sqlx = { version = "0.9", features = ["sqlite", "runtime-tokio"], optional = true }

# ── Phase 13: Alerting ───────────────────────────────────────────────────────
notify-rust = "4.17.0"
log = "0.4.32"
env_logger = "0.11.10"

# ── Phase 14: Metrics Export ─────────────────────────────────────────────────
reqwest = { version = "0.13.4", features = ["json"], optional = true }
metrics = { version = "0.24.6", optional = true }
metrics-exporter-prometheus = { version = "0.18.3", optional = true }
serde_json = "1.0.150"

# ── Phase 15: Visualization ──────────────────────────────────────────────────
plotters = { version = "0.3.7", optional = true }

# ── Platform-specific ────────────────────────────────────────────────────────
[target.'cfg(unix)'.dependencies]
libc = "0.2.186"
netstat2 = "0.11.2"
pnet = "0.35"
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Performance",              # PDH counters (GPU utilization via Task Manager path)
    "Win32_System_Threading",                # OpenProcess / TerminateProcess / GetCurrentProcess
    "Win32_System_Diagnostics_ToolHelp",     # Process snapshots
    "Win32_Security",                        # Token / elevation check
    "Win32_System_SystemServices",           # General system info
    "Win32_NetworkManagement_IpHelper",      # GetExtendedTcpTable / GetAdaptersAddresses
    "Win32_Networking_WinSock",              # SOCKADDR types
    "Win32_System_Services",                 # OpenSCManager / EnumServicesStatusEx
    "Win32_System_SystemInformation",        # GlobalMemoryStatusEx
    "Win32_System_ProcessStatus",            # GetPerformanceInfo (paged/nonpaged pool)
    "Win32_System_Power",                    # POWER_INFORMATION_LEVEL / power plan support
    "Win32_Graphics_Dxgi",                   # IDXGIFactory / IDXGIAdapter — GPU name + VRAM
    "Win32_Graphics_Dxgi_Common",            # DXGI shared types
]}

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18"
nvml-wrapper = "0.12.1"
ethtool = "0.2.9"
openssl = { version = "0.10.80", features = ["vendored"] }
